--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -125,7 +125,7 @@ CONFIG_PACKAGE_luci-app-zerotier=y #zerotier内网穿透
 
 # 第三方插件选择:
 #CONFIG_PACKAGE_luci-app-oaf=y #应用过滤
-CONFIG_PACKAGE_luci-app-clash=y
+#CONFIG_PACKAGE_luci-app-clash=y
 #CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 #CONFIG_PACKAGE_luci-app-serverchan=y #微信推送
 #CONFIG_PACKAGE_luci-app-eqos=y #IP限速
@@ -135,7 +135,7 @@ CONFIG_PACKAGE_luci-app-clash=y
 
 # VPN相关插件(禁用):
 #
-#CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-pptp-server=n #PPTP VPN 服务器
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
