--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -78,15 +78,15 @@ CONFIG_PACKAGE_wpa-supplicant=y
 # 插件集成
 #
 #CONFIG_PACKAGE_luci-app-accesscontrol is not set
-CONFIG_PACKAGE_luci-app-aria2=n
-CONFIG_PACKAGE_luci-app-arpbind=y
+#CONFIG_PACKAGE_luci-app-aria2=n
+#CONFIG_PACKAGE_luci-app-arpbind=y
 #CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-mwan3=n
 CONFIG_PACKAGE_luci-app-mwan3helper=n
 #CONFIG_PACKAGE_luci-app-jd-dailybonus=n
 #CONFIG_PACKAGE_luci-app-netdata=n
 #CONFIG_PACKAGE_luci-app-syncdial=n
-CONFIG_PACKAGE_luci-app-uhttpd=y
+#CONFIG_PACKAGE_luci-app-uhttpd=y
 #CONFIG_PACKAGE_luci-app-unblockmusic=n
 #CONFIG_UnblockNeteaseMusic_Go=n
 #CONFIG_UnblockNeteaseMusic_NodeJS=n
