--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -79,21 +79,19 @@ CONFIG_PACKAGE_wpa-supplicant=y
 #
 #CONFIG_PACKAGE_luci-app-accesscontrol is not set
 #CONFIG_PACKAGE_luci-app-aria2=n
-#CONFIG_PACKAGE_luci-app-arpbind=y
-#CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
+CONFIG_PACKAGE_luci-app-firewall=y #添加防火墙
 CONFIG_PACKAGE_luci-app-mwan3=n
 CONFIG_PACKAGE_luci-app-mwan3helper=n
 #CONFIG_PACKAGE_luci-app-jd-dailybonus=n
 #CONFIG_PACKAGE_luci-app-netdata=n
 #CONFIG_PACKAGE_luci-app-syncdial=n
-#CONFIG_PACKAGE_luci-app-uhttpd=y
 #CONFIG_PACKAGE_luci-app-unblockmusic=n
 #CONFIG_UnblockNeteaseMusic_Go=n
-#CONFIG_UnblockNeteaseMusic_NodeJS=n
-CONFIG_PACKAGE_luci-app-vsftpd=y
+CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
 CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
-#CONFIG_PACKAGE_luci-app-ramfree=y
+#CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
 
 
 # 常用LuCI插件:
@@ -121,7 +119,7 @@ CONFIG_PACKAGE_luci-app-diskman=y #磁盘管理磁盘信息
 CONFIG_PACKAGE_luci-app-zerotier=y #zerotier内网穿透
 #CONFIG_PACKAGE_luci-app-hd-idle is not set #磁盘休眠
 #CONFIG_PACKAGE_luci-app-wrtbwmon is not set #实时流量监测
-#CONFIG_PACKAGE_luci-app-sqm=y #SQM智能队列管理
+#CONFIG_PACKAGE_luci-app-sqm=n #SQM智能队列管理
 
 # 第三方插件选择:
 #CONFIG_PACKAGE_luci-app-oaf=y #应用过滤
@@ -150,7 +148,10 @@ CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+
+
 
 # Passwall插件:
 #CONFIG_PACKAGE_luci-app-passwall=y
@@ -170,8 +171,8 @@ CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_kcptun-client=y
 # CONFIG_PACKAGE_chinadns-ng=y
 # CONFIG_PACKAGE_haproxy=y
-CONFIG_PACKAGE_v2ray=y
-CONFIG_PACKAGE_v2ray-plugin=y
+#CONFIG_PACKAGE_v2ray=y
+#CONFIG_PACKAGE_v2ray-plugin=y
 #CONFIG_PACKAGE_simple-obfs=y
 # CONFIG_PACKAGE_trojan=y
 #CONFIG_PACKAGE_trojan-go=y
@@ -184,9 +185,9 @@ CONFIG_PACKAGE_v2ray-plugin=y
 #CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 #CONFIG_PACKAGE_pdnsd-alt=y
 #CONFIG_PACKAGE_dns2socks=y
-#CONFIG_PACKAGE_xray=y
-#CONFIG_XRAY_EXCLUDE_ASSETS=y
-#CONFIG_XRAY_COMPRESS_UPX=y
+CONFIG_PACKAGE_xray=y
+CONFIG_XRAY_EXCLUDE_ASSETS=y
+CONFIG_XRAY_COMPRESS_UPX=y
 
 
 #
