--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -28,7 +28,7 @@ CONFIG_PACKAGE_samba36=y
 CONFIG_PACKAGE_luci-app-samba=y
 CONFIG_PACKAGE_luci-app-cifsd=n
 CONFIG_PACKAGE_luci-app-cifs-mount=n
-
+CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
 
 #
 # USB与存储相关支持
@@ -56,6 +56,7 @@ CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
+#CONFIG_PACKAGE_luci-app-hd-idle=y #磁盘休眠
 
 #
 # 无线驱动
@@ -88,11 +89,10 @@ CONFIG_PACKAGE_luci-app-mwan3helper=n
 #CONFIG_PACKAGE_luci-app-syncdial=n
 #CONFIG_PACKAGE_luci-app-unblockmusic=n
 #CONFIG_UnblockNeteaseMusic_Go=n
-CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
 CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
 #CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
-
+CONFIG_PACKAGE_iperf3=y
 
 # 常用LuCI插件:
 #CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告
@@ -117,7 +117,6 @@ CONFIG_PACKAGE_luci-app-diskman=y #磁盘管理磁盘信息
 #CONFIG_PACKAGE_luci-app-amule is not set #电驴离线下载
 #CONFIG_PACKAGE_luci-app-xlnetacc is not set #迅雷快鸟
 CONFIG_PACKAGE_luci-app-zerotier=y #zerotier内网穿透
-#CONFIG_PACKAGE_luci-app-hd-idle is not set #磁盘休眠
 #CONFIG_PACKAGE_luci-app-wrtbwmon is not set #实时流量监测
 #CONFIG_PACKAGE_luci-app-sqm=n #SQM智能队列管理
 
