--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -87,7 +87,7 @@ CONFIG_PACKAGE_luci-app-mwan3helper=n
 #CONFIG_PACKAGE_luci-app-jd-dailybonus=n
 #CONFIG_PACKAGE_luci-app-netdata=n
 #CONFIG_PACKAGE_luci-app-syncdial=n
-#CONFIG_PACKAGE_luci-app-unblockmusic=n
+CONFIG_PACKAGE_luci-app-unblockmusic=n
 #CONFIG_UnblockNeteaseMusic_Go=n
 CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
@@ -99,7 +99,7 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-webadmin=n #Web管理页面设置
-CONFIG_PACKAGE_luci-app-ddns=y #DDNS服务
+CONFIG_PACKAGE_luci-app-ddns=n #DDNS服务
 CONFIG_PACKAGE_luci-app-vlmcsd=n #KMS激活服务器
 CONFIG_PACKAGE_luci-app-filetransfer=y #系统-文件传输
 CONFIG_PACKAGE_luci-app-autoreboot=y #定时重启
@@ -132,14 +132,14 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 
 # VPN相关插件(禁用):
 #
-CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+# CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-pptp-server=n #PPTP VPN 服务器
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
-#CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
+CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 
 # ShadowsocksR插件:
-#CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-app-ssr-plus=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
@@ -184,20 +184,20 @@ CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 #CONFIG_PACKAGE_pdnsd-alt=y
 #CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_xray=y
-CONFIG_XRAY_EXCLUDE_ASSETS=y
-CONFIG_XRAY_COMPRESS_UPX=y
+#CONFIG_PACKAGE_xray=y
+#CONFIG_XRAY_EXCLUDE_ASSETS=y
+#CONFIG_XRAY_COMPRESS_UPX=y
 
 
 #
 # 主题
 #
 #CONFIG_PACKAGE_luci-theme-atmaterial=y
-CONFIG_PACKAGE_luci-theme-argon_new=y
-#CONFIG_PACKAGE_luci-theme-netgear=y
+#CONFIG_PACKAGE_luci-theme-argon_new=y
+CONFIG_PACKAGE_luci-theme-netgear=y
 #CONFIG_PACKAGE_luci-theme-edge=y
 #CONFIG_PACKAGE_luci-theme-material=y
-#CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
