--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -184,9 +184,7 @@ CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_pdnsd-alt=y
 CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_xray-core=y
-#CONFIG_XRAY_EXCLUDE_ASSETS=y
-#CONFIG_XRAY_COMPRESS_UPX=y
-
+CONFIG_PACKAGE_xray-geodata=y
 
 #
 # 主题
