--- a/.github/workflows/Newifi3-Lienol.yml
+++ b/.github/workflows/Newifi3-Lienol.yml
@@ -26,7 +26,7 @@ on:
 
 env:
   REPO_URL: https://github.com/Lienol/openwrt
-  REPO_BRANCH: master
+  REPO_BRANCH: 19.07
   DIY_SH: OpenWrt-Lienol.sh
   SSH_ACTIONS: false        # SSH 连接 Actions 功能
   UPLOAD_BIN_DIR: true      # 上传 bin 目录。即包含所有 ipk 文件和固件的目录
