--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -34,22 +34,22 @@ CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
 # USB与存储相关支持
 #
 CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_kmod-fs-qntfs=y
-CONFIG_PACKAGE_kmod-scsi-core=y
+#CONFIG_PACKAGE_kmod-fs-qntfs=y
+#CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_ntfs-3g=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-fuse=y
 CONFIG_PACKAGE_kmod-mtd-rw=y
-CONFIG_PACKAGE_kmod-mmc=y
-CONFIG_PACKAGE_kmod-sdhci=y
-CONFIG_PACKAGE_kmod-mmc-spi=y
+#CONFIG_PACKAGE_kmod-mmc=y
+#CONFIG_PACKAGE_kmod-sdhci=y
+#CONFIG_PACKAGE_kmod-mmc-spi=y
 CONFIG_PACKAGE_kmod-usb-core=y
-CONFIG_PACKAGE_kmod-usb-dwc3=y
-CONFIG_PACKAGE_kmod-usb-dwc3-of-simple=y
+#CONFIG_PACKAGE_kmod-usb-dwc3=y
+#CONFIG_PACKAGE_kmod-usb-dwc3-of-simple=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
-CONFIG_PACKAGE_kmod-usb-ohci=y
+#CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
