--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -28,7 +28,8 @@ CONFIG_PACKAGE_samba36=y
 CONFIG_PACKAGE_luci-app-samba=y
 CONFIG_PACKAGE_luci-app-cifsd=n
 CONFIG_PACKAGE_luci-app-cifs-mount=n
-CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
+#CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
+CONFIG_PACKAGE_openssh-sftp-server=y
 
 #
 # USB与存储相关支持
@@ -50,13 +51,14 @@ CONFIG_PACKAGE_kmod-usb-core=y
 #CONFIG_PACKAGE_kmod-usb-dwc3-of-simple=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 #CONFIG_PACKAGE_kmod-usb-ohci=y
-#CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_luci-app-hd-idle=y #磁盘休眠
+#CONFIG_PACKAGE_luci-app-usb-printer=y
+#CONFIG_PACKAGE_kmod-usb-printer=y
 
 #
 # 无线驱动
