--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -161,7 +161,7 @@ CONFIG_PACKAGE_luci-app-passwall=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=n
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
@@ -173,7 +173,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_pdnsd=y
 CONFIG_PACKAGE_haproxy=y
 #CONFIG_PACKAGE_v2ray=y
 #CONFIG_PACKAGE_v2ray-plugin=y
-#CONFIG_PACKAGE_simple-obfs=y
+CONFIG_PACKAGE_simple-obfs=n
 CONFIG_PACKAGE_trojan=n
 CONFIG_PACKAGE_trojan-go=n
 CONFIG_PACKAGE_trojan-plus=n
