--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -28,35 +28,37 @@ CONFIG_PACKAGE_samba36=y
 CONFIG_PACKAGE_luci-app-samba=y
 CONFIG_PACKAGE_luci-app-cifsd=n
 CONFIG_PACKAGE_luci-app-cifs-mount=n
-CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
+#CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
+CONFIG_PACKAGE_openssh-sftp-server=y
 
 #
 # USB与存储相关支持
 #
 CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_kmod-fs-qntfs=y
-CONFIG_PACKAGE_kmod-scsi-core=y
+#CONFIG_PACKAGE_kmod-fs-qntfs=y
+#CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_ntfs-3g=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-fuse=y
 CONFIG_PACKAGE_kmod-mtd-rw=y
-CONFIG_PACKAGE_kmod-mmc=y
-CONFIG_PACKAGE_kmod-sdhci=y
-CONFIG_PACKAGE_kmod-mmc-spi=y
+#CONFIG_PACKAGE_kmod-mmc=y
+#CONFIG_PACKAGE_kmod-sdhci=y
+#CONFIG_PACKAGE_kmod-mmc-spi=y
 CONFIG_PACKAGE_kmod-usb-core=y
-CONFIG_PACKAGE_kmod-usb-dwc3=y
-CONFIG_PACKAGE_kmod-usb-dwc3-of-simple=y
+#CONFIG_PACKAGE_kmod-usb-dwc3=y
+#CONFIG_PACKAGE_kmod-usb-dwc3-of-simple=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
-CONFIG_PACKAGE_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-printer=y
+#CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_luci-app-hd-idle=y #磁盘休眠
+#CONFIG_PACKAGE_luci-app-usb-printer=y
+#CONFIG_PACKAGE_kmod-usb-printer=y
 
 #
 # 无线驱动
@@ -139,8 +141,8 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 
 # ShadowsocksR插件:
-CONFIG_PACKAGE_luci-app-ssr-plus=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=n
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
@@ -153,22 +155,17 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
 
 
 # Passwall插件:
-CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
@@ -178,9 +175,9 @@ CONFIG_PACKAGE_luci-app-passwall=y
 #CONFIG_PACKAGE_haproxy=y
 #CONFIG_PACKAGE_v2ray=y
 #CONFIG_PACKAGE_v2ray-plugin=y
-#CONFIG_PACKAGE_simple-obfs=y
-# CONFIG_PACKAGE_trojan=y
-#CONFIG_PACKAGE_trojan-go=y
+CONFIG_PACKAGE_simple-obfs=n
+CONFIG_PACKAGE_trojan=n
+CONFIG_PACKAGE_trojan-go=n
 CONFIG_PACKAGE_trojan-plus=n
 # CONFIG_PACKAGE_brook=y
 # CONFIG_PACKAGE_ipt2socks=y
@@ -203,9 +200,9 @@ CONFIG_PACKAGE_trojan-plus=n
 #CONFIG_PACKAGE_luci-theme-argon_new=y
 #CONFIG_PACKAGE_luci-theme-netgear=y
 #CONFIG_PACKAGE_luci-theme-edge=y
-CONFIG_PACKAGE_luci-theme-material=y
-#CONFIG_PACKAGE_luci-theme-argon=y
-#CONFIG_PACKAGE_luci-app-argon-config=y
+#CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
 #
