--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -155,7 +155,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
 
 # Passwall插件:
 CONFIG_PACKAGE_luci-app-passwall=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
@@ -178,7 +178,7 @@ CONFIG_PACKAGE_trojan=n
 CONFIG_PACKAGE_trojan-go=n
 CONFIG_PACKAGE_trojan-plus=n
 # CONFIG_PACKAGE_brook=y
-# CONFIG_PACKAGE_ipt2socks=y
+CONFIG_PACKAGE_ipt2socks=y
 # CONFIG_PACKAGE_shadowsocks-libev-config=y
 # CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 # CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
