--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -80,7 +80,7 @@ CONFIG_PACKAGE_wpa-supplicant=y
 #
 # 插件集成
 #
-#CONFIG_PACKAGE_luci-app-accesscontrol is not set
+CONFIG_PACKAGE_luci-app-turboacc=y
 #CONFIG_PACKAGE_luci-app-aria2=n
 CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
 CONFIG_PACKAGE_luci-app-firewall=y #添加防火墙
