--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -95,6 +95,7 @@ CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
 #CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_luci-app-advanced=y # 高级设置
 
 # 常用LuCI插件:
 #CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告
@@ -148,9 +149,9 @@ CONFIG_PACKAGE_luci-app-ssr-plus=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 
 
 
@@ -188,7 +189,7 @@ CONFIG_PACKAGE_trojan-plus=n
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 #CONFIG_PACKAGE_pdnsd-alt=y
 #CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_xray-core=y
+#CONFIG_PACKAGE_xray-core=y
 #CONFIG_PACKAGE_xray-geodata=y
 
 
