--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -211,7 +211,7 @@ CONFIG_PACKAGE_luci-theme-argon_new=y
 # CONFIG_PACKAGE_luci-theme-edge=y
 #CONFIG_PACKAGE_luci-theme-material=y
 #CONFIG_PACKAGE_luci-theme-argon=y
-#CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
 #
