--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -95,7 +95,7 @@ CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
 #CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_luci-app-advanced=y #文件管理
+#CONFIG_PACKAGE_luci-app-advanced=y #文件管理
 
 # DDNS 相关
 #CONFIG_PACKAGE_luci-app-ddns=y
