--- a/.github/workflows/newifi3ssrp.yml
+++ b/.github/workflows/newifi3ssrp.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build newifi3clash
+name: Build newifi3ssrp
 
 on:
   repository_dispatch:
