--- a/newifi3ssrp.config
+++ b/newifi3ssrp.config
@@ -159,7 +159,6 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
@@ -203,7 +202,7 @@ CONFIG_PACKAGE_trojan-plus=n
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 #CONFIG_PACKAGE_pdnsd-alt=y
 #CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_xray-core=y
+#CONFIG_PACKAGE_xray-core=y
 # CONFIG_PACKAGE_xray-geodata=y
 
 
