--- a/newifi3ssrp.config
+++ b/newifi3ssrp.config
@@ -142,7 +142,7 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 
 # VPN相关插件(禁用):
 #
-CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+#CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-pptp-server=n #PPTP VPN 服务器
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
@@ -210,11 +210,11 @@ CONFIG_PACKAGE_trojan-plus=n
 # 主题
 #
 # CONFIG_PACKAGE_luci-theme-atmaterial=y
-CONFIG_PACKAGE_luci-theme-argon_new=y
+# CONFIG_PACKAGE_luci-theme-argon_new=y
 # CONFIG_PACKAGE_luci-theme-netgear=y
 # CONFIG_PACKAGE_luci-theme-edge=y
 #CONFIG_PACKAGE_luci-theme-material=y
-#CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
