--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -151,9 +151,9 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 
 # vssr
 CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=n
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_V2ray=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_Trojan=n
+CONFIG_PACKAGE_V2ray=y
+CONFIG_PACKAGE_ShadowsocksR_Libev_Server=y
 
 # ShadowsocksR插件:
 #CONFIG_PACKAGE_luci-app-ssr-plus=y
