--- a/newifi3ssrp.config
+++ b/newifi3ssrp.config
@@ -197,7 +197,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
 #  CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-app-argon-config=y
-#CONFIG_PACKAGE_luci-theme-bootstrap=n
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 
 #
 # 基础命令及其他
